--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,13 +112,13 @@ about
 servise
 ------------------------------*/
 
-#servise h3 {
+#skill h3 {
     text-align: center;
     font-size: 24px;
     margin-bottom: 40px;
 }
 
-.servise-icon {
+.skill-icon {
     text-align: center;
     font-size: 50px;
     margin-bottom: 40px;
